Added missing dependency to the anchor package file

--- a/anchor/package.json
+++ b/anchor/package.json
@@ -9,6 +9,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "json-socket": ">=0.1.2",
-    "socket.io": "*"
+    "socket.io": "*",
+    "express": "*"
   }
 }
