--- a/anchor/package.json
+++ b/anchor/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "json-socket": ">=0.1.2",
     "socket.io": "*",
-    "express": "*"
+    "express": "*",
+    "node-redis": "0.1.x"
   }
 }
